; ModuleID = '/home/carl/AnghaBench/libgit2/tests/odb/extr_freshen.c_set_time_wayback.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/odb/extr_freshen.c_set_time_wayback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.stat = type { i32 }
%struct.p_timeval = type { i32, i64 }

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"testrepo.git/objects\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.stat*, i8*)* @set_time_wayback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_time_wayback(%struct.stat* %0, i8* %1) #0 {
  %3 = alloca %struct.stat*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [2 x %struct.p_timeval], align 16
  store %struct.stat* %0, %struct.stat** %3, align 8
  store i8* %1, i8** %4, align 8
  %7 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %7, i32* %5, align 4
  %8 = getelementptr inbounds [2 x %struct.p_timeval], [2 x %struct.p_timeval]* %6, i64 0, i64 0
  %9 = getelementptr inbounds %struct.p_timeval, %struct.p_timeval* %8, i32 0, i32 0
  store i32 1234567890, i32* %9, align 16
  %10 = getelementptr inbounds [2 x %struct.p_timeval], [2 x %struct.p_timeval]* %6, i64 0, i64 0
  %11 = getelementptr inbounds %struct.p_timeval, %struct.p_timeval* %10, i32 0, i32 1
  store i64 0, i64* %11, align 8
  %12 = getelementptr inbounds [2 x %struct.p_timeval], [2 x %struct.p_timeval]* %6, i64 0, i64 1
  %13 = getelementptr inbounds %struct.p_timeval, %struct.p_timeval* %12, i32 0, i32 0
  store i32 1234567890, i32* %13, align 16
  %14 = getelementptr inbounds [2 x %struct.p_timeval], [2 x %struct.p_timeval]* %6, i64 0, i64 1
  %15 = getelementptr inbounds %struct.p_timeval, %struct.p_timeval* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @git_buf_joinpath(i32* %5, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = call i32 @git_buf_cstr(i32* %5)
  %19 = getelementptr inbounds [2 x %struct.p_timeval], [2 x %struct.p_timeval]* %6, i64 0, i64 0
  %20 = call i32 @p_utimes(i32 %18, %struct.p_timeval* %19)
  %21 = call i32 @cl_must_pass(i32 %20)
  %22 = call i32 @git_buf_cstr(i32* %5)
  %23 = load %struct.stat*, %struct.stat** %3, align 8
  %24 = call i32 @p_lstat(i32 %22, %struct.stat* %23)
  %25 = call i32 @cl_must_pass(i32 %24)
  %26 = call i32 @git_buf_dispose(i32* %5)
  ret void
}

declare dso_local i32 @git_buf_joinpath(i32*, i8*, i8*) #1

declare dso_local i32 @cl_must_pass(i32) #1

declare dso_local i32 @p_utimes(i32, %struct.p_timeval*) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @p_lstat(i32, %struct.stat*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
